--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@
 
 /* ! Fin Cards */
 
-/* ! Comienzo Lineas Divisorias !! LISTO */
+/* ! Comienzo Lineas !! LISTO */
 .lineas {
     text-align: center;
     margin-top: 2em;
@@ -161,10 +161,11 @@
     /* mueve las lineas con respecto al texto */
     display: inline-block;
     color: #eb654077;
+    transition: 0.1s ease-in-out;
+    /* inicio y fin lentos */
 }
 
-.lineas h2::after,
-h2::before {
+.lineas h2::after {
     content: '';
     /* es necesario para que se vea las lineas */
     position: absolute;
@@ -174,17 +175,21 @@ h2::before {
     width: 18em;
     /* tamaño de la linea */
     height: 3px;
-    transition: 0.2s ease-in-out;
-    /* inicio y fin lentos */
+    right: -19em;
 }
 
 .lineas h2::before {
     left: -19em;
     /* posicion linea */
-}
-
-.lineas h2::after {
-    right: -19em;
+    content: '';
+    /* es necesario para que se vea las lineas */
+    position: absolute;
+    top: 50%;
+    /* posicion de ubicacion de la linea */
+    border-bottom: 3px solid #eb65403c;
+    width: 18em;
+    /* tamaño de la linea */
+    height: 3px;
 }
 
 .lineas h2:hover::before {
@@ -197,6 +202,7 @@ h2::before {
 }
 
 /* !Fin Lineas */
+
 
 /* ! Cards Destacados !! LISTO */
 /* SOMBRA CARDS */
@@ -227,3 +233,56 @@ h2::before {
 }
 
 /* ! Fin de Cards Destacados */
+
+/* ! Catalogo Productos !! LISTO */
+.card.cards-productos {
+    border-radius: 30px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.06);
+    height: 500px;
+}
+
+.card.cards-productos img {
+    border-radius: 30px;
+    background-color: rgba(128, 128, 128, 0.192);
+}
+
+.card button {
+    border-radius: 50px;
+    width: 150px;
+}
+
+.card.cards-productos button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    border: none;
+}
+
+.titulo-productos {
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-weight: 500;
+    text-shadow: 5px 5px 5px #aaa;
+    color: gray;
+
+}
+
+.card.cards-productos h4 {
+    color: rgb(0, 91, 228);
+}
+
+.card.cards-productos h5 {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.card.cards-productos p {
+    font-size: 16px;
+    font-weight: 400;
+    text-align: justify;
+}
+
+.card.cards-productos:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* ! Fin Catalogo Productos */
