--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,400&display=swap');
 
 
+html {
+    height: 100%;
+}
+
 /* COLOR BODY */
-.body {
+body {
     background-color: #f5f5f5d1;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    min-height: 100%;
+    flex-direction: column;
 }
 
 /*! Navbar !! LISTO*/
@@ -74,6 +81,7 @@
 /* COLOR FOOTER */
 .footer {
     background-image: linear-gradient(to bottom, #f5f5f5d1 0%, #eb6540d5 300%);
+    margin-top: auto;
 }
 
 /* INPUT MAIL */
@@ -246,7 +254,7 @@
     background-color: rgba(128, 128, 128, 0.192);
 }
 
-.card.cards-productos a{
+.card.cards-productos a {
     border-radius: 50px;
     width: 150px;
 }
@@ -347,7 +355,8 @@
 .productos strong {
     font-weight: 400;
     font-size: 38px;
-    text-shadow: 5px 5px 5px #aaa;;
+    text-shadow: 5px 5px 5px #aaa;
+    ;
 }
 
 .productos img {
@@ -390,3 +399,35 @@
 
 
 /* ! Fin Descripcion Productos */
+
+/* ! mpagos */
+.mp {
+    border-right-color: #eb65407c;
+    border-right-style: groove;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+/* ! nosotros */
+
+.nosotros {
+    display: flex;
+    align-items: center;
+}
+
+.nt{
+    position:relative;
+    display:inline-block;
+    text-align: center;
+    color: rgba(245, 245, 245, 0.625);
+}
+
+.centrado{
+    position:fixed;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
