--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ body {
 }
 
 .centrado{
-    position:fixed;
+    position:absolute;
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
